# advanced_cpp

./: .clang-format  .gitignore  CMakeLists.txt  If.cpp  README.md  playground.cpp  todo.bash
basis/: 03_fmt.cpp  05_smart_pointers.cpp  09_googe_test.cpp  CMakeLists.txt
basis_decoupled/: 00_template.cpp  00_template_test.cpp  08_closure_struct.cpp  08_closure_struct_test.cpp  09_algorithms.cpp  09_algorithms.h  09_algorithms_test.cpp  1_template.cpp  1_template_test.cpp  CMakeLists.txt  new_file.py
basis_done_right/: 02_string_view.cpp  CMakeLists.txt
data_structures/: CMakeLists.txt
filesystem/: CMakeLists.txt
lambda/: CMakeLists.txt  higher_order_functions.cpp
lib/: fetchlibs.bash
smart_pointers/: CMakeLists.txt
spikelisp/: .gitignore  CMakeLists.txt  README.md  main.cpp  mainv2_don't_work.cpp  run.bash
spikelisp/test/: CMakeLists.txt
templates/: CMakeLists.txt
test/: 09_test.cpp  CMakeLists.txt
