project(template)

add_executable(oop_basis oop_basis.cpp)

add_executable(composing_maps composing_maps.cpp)

add_executable(filesystem_basis filesystem_basis.cpp)

add_executable(lambda_basis lambda_basis.cpp)

add_executable(template_basis template_basis.cpp)

add_executable(higher_order_functions_basis recrusive_sum_basis.cpp)